fix overflow for kb cards

--- a/src/app.css
+++ b/src/app.css
@@ -120,6 +120,10 @@ ul {
 	padding-inline-start: var(--padding);
 }
 
+ol {
+	overflow-wrap: anywhere;
+}
+
 /* Links */
 
 a {
